# onesock

./: .gitignore  Actions.hs  CachingImageDB.hs  GUI.hs  ImageUtil.hs  Main.hs  README  ScanDB.hs  onesock.cabal
OneSock/: GUI.hs  ImageUtil.hs  Main.hs
OneSock/DB/: Scans.hs
Onesock/DB/: Image.hs  Scans.hs
Onesock/Test/: Main.hs
util/: functions.bash
