Name: OneSock
Version: 0.1
Description: Process a flood of incoming bills
License: GPL
License-file: LICENSE
Author: Jason Felice
Maintainer: jason.m.felice@gmail.com
Build-Type: Simple
Cabal-Version: >= 1.2

Executable OneSock
  main-is: Main.hs
  Build-Depends:
    base >= 4,
    directory,
    HUnit,
    QuickCheck == 1.2.0.0,
    random,
    time,
    old-locale,
    uuid, 
    bitmap,
    process,
    gd >= 3000.4.1,
    OpenGL, GLUT
